[package]
name = "hello_rocket"
version = "0.1.0"
authors = ["user"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
serde_derive = "1.0.36"
serde = "1.0"
serde_json = "1.0"
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

[dependencies.rusqlite]
version = "0.13.0"
#features = ["bundled"]