[package]
name = "rusty_nanobot"
version = "0.1.0"
authors = ["Evaldas Tyla"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
serde_derive = "1.0.36"
serde = "1.0"
serde_json = "1.0"
futures = "0.1"
hyper = "0.11"
hyper-tls = "0.1.3"
tokio-core = "0.1"
regex = "1.0.0"
chrono = "0.4"
erased-serde = "0.3.3"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

[dependencies.rusqlite]
version = "0.13.0"
features = ["bundled"]