[package]
name = "rusty_nanobot"
version = "0.1.0"
authors = ["Evaldas Tyla"]

[dependencies]
rocket = "*"
rocket_codegen = "*"
serde_derive = "*"
serde = "*"
serde_json = "*"
futures = "0.1"
hyper = "0.11"
hyper-tls = "0.1.3"
tokio-core = "*"
regex = "*"
chrono = "*"
erased-serde = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

[dependencies.rusqlite]
version = "*"
features = ["bundled"]